# FerretDBvsMongoDB

./: .gitignore  README.md  docker-compose.yml  mongo.dump  mongodb_vs_ferretdb.py  pyproject.toml
